--- a/index.html
+++ b/index.html
@@ -17,7 +17,41 @@
 </head>
 <body>
   <div id="app" class="container">
-
+    <!-- logo -->
+    <section class="logo">
+      <img src="assets/img/logo.png" alt="logo Boolean">
+    </section>
+    <!-- todolist -->
+    <section class="todolist">
+      <input type="text" placeholder="...">
+      <i class="fas fa-plus fa-x2"></i>
+    </section>
+    <!-- ul -->
+    <section class="list">
+      <ul>
+        <li>
+          <span>Ciao</span>
+          <i class="fas fa-times"></i>
+        </li>
+        <li>
+          <span>Ciao</span>
+          <i class="fas fa-times"></i>
+        </li>
+        <li>
+          <span>Ciao</span>
+          <i class="fas fa-times"></i>
+        </li>
+        <li>
+          <span>Ciao</span>
+          <i class="fas fa-times"></i>
+        </li>
+        <li>
+          <span>Ciao</span>
+          <i class="fas fa-times"></i>
+        </li>
+      </ul>
+      
+    </section>
   </div>
   <script src="assets/js/script.js"></script>
 </body>
