--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
     <!-- ul -->
     <section class="list">
       <ul>
+        <!-- creo gli li dinamicamente con ciclo v-for-->
         <li 
           v-for="(el, index) in toDoarray"
           :class="el.checked === true ? 'checked' : null"
           @click="el.checked = !el.checked">
         {{el.action}}
+        <!-- richiamo la funzione removeItem per eliminare li al click su fa-times -->
           <i
           @click="removeItem" 
           class="fas fa-times"></i>
